--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
-<div class="menu-item"><a href="index.html#teaching">Teaching</a></div>
 <div class="menu-item"><a href="index.html#service">Services</a></div>
 </td>
 <td id="layout-content">
@@ -44,9 +43,6 @@
 <p class="big" align="justify"> My research seeks to address fundamental operational problems in online platforms, experimentation, retailing, and supply chain analytics by connecting optimization, machine learning, and economics. As part of it, I have been collaborating with companies across different industries, such as consumer packaged goods and manufacturing. My works have been recognized by an Honorable Mention in <a href="https://www.informs.org/Recognizing-Excellence/INFORMS-Prizes/George-Nicholson-Student-Paper-Competition" target="_blank">INFORMS George E. Nicholson 2019 Student Paper Competition</a> and a Finalist in POMS-JD.com 2019 Best Data-Driven Research Paper Competition.</p>
 
 <a name="pub"></a>
-
-
-
 
 <h2>Selected Working Papers</h2>
 
@@ -126,8 +122,8 @@ Working paper</p>
 		&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Enrollment: 61 (primarily Full-Time MBA, Master of Supply Chain Management, and Master of Business Analytics programs)<br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Core requirement for MIT Sloan Business Analytics Certificate<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Teaching Assistant for <a href="http://www.mit.edu/~golrezae/index.html" target="_blank">Negin Golrezaei</a></p>
-
-<a name="service"></a>-->
+-->
+<a name="service"></a>
 
 <h2>Professional Services</h2>
 
