--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
 Major revision, <b><i>Management Science</i></b></br>
-&#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a>, see <a href="http://dsl.mit.edu/impact-practice-examples">here</a> for a summary<br/>
+&#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
 &#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i>.<br/>
 &#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section 2021 Best Cluster Paper Award</span><br/>
 &#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
