--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ Major revision, <b><i>Management Science</i></b></br>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://arxiv.org/abs/2010.03161" target="_blank">Model-Free Non-Stationary RL: Near-Optimal Regret and Applications in Multi-Agent RL and Inventory Control</a></span> (with Weichao Mao, Kaiqing Zhang, David Simchi-Levi, and Tamer Basar)<br />
+Under review, <b><i>Management Science</i></b></br>
 &#9671;	Preliminary version: <i>Proceedings of the 38th International Conference on Machine Learning (<b>ICML 2021</b>)</i>.</p>
 
 
@@ -74,7 +75,7 @@ Working paper</p>
 <h2>Journal Publications</h2>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3334629" target="_blank">Meta Dynamic Pricing: Transfer Learning Across Experiments</a></span> (with Hamsa Bastani and David Simchi-Levi)<br />
-<i><b>Management Science</b> (Forthcoming)</i><br />
+<i><b>Management Science</b> (2021)</i><br />
 &#9671;	<span style="color:#DC143C;">Spotlight Track, INFORMS 2019 RM&P Conference</span></p>
 		
 <p class="big"> <span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3261050" target="_blank">Hedging the Drift: Learning to Optimize under Non-Stationarity</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br />
