--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
 <div class="menu-item"><a href="index.html#service">Services</a></div>
+<div class="menu-item"><a href="CV_RuihaoZhu.pdf">CV</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
