--- a/index.html
+++ b/index.html
@@ -47,22 +47,29 @@
 
 <h2>Selected Working Papers</h2>
 
+
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Policy Learning
+		</a></span> (with Branislav Kveton)<br /> 
+	&#9671; In collaboration with <a href="https://www.amazon.science/">Amazon Science</a><br/>
+		&#9671; Preliminary version: <i>(Oral Presentation) MIT 2021 Conference on Digital
+			Experimentation (<b>CODE@MIT</b>)</i><br/></p>
+
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
 Major revision, <b><i>Management Science</i></b></br>
 &#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
-&#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i>.<br/>
+&#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
 &#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section 2021 Best Cluster Paper Award</span><br/>
 &#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
 		
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
 Major revision, <b><i>Management Science</i></b></br>
-&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i>.</p>
+&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
 
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://arxiv.org/abs/2010.03161" target="_blank">Model-Free Non-Stationary RL: Near-Optimal Regret and Applications in Multi-Agent RL and Inventory Control</a></span> (with Weichao Mao, Kaiqing Zhang, David Simchi-Levi, and Tamer Basar)<br />
 Under review, <b><i>Management Science</i></b></br>
-&#9671;	Preliminary version: <i>Proceedings of the 38th International Conference on Machine Learning (<b>ICML 2021</b>)</i>.</p>
+&#9671;	Preliminary version: <i>Proceedings of the 38th International Conference on Machine Learning (<b>ICML 2021</b>)</i></p>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://arxiv.org/abs/1810.10637" target="_blank">Learning to Route Efficiently with End-to-End Feedback: The Value of Networked Structure</a></span> (with Eytan Modiano)<br />
