--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Working paper</p>
 &#9671;	<span style="color:#DC143C;">Spotlight Track, INFORMS 2019 RM&P Conference</span></p>
 		
 <p class="big"> <span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3261050" target="_blank">Hedging the Drift: Learning to Optimize under Non-Stationarity</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br />
-<i><b>Management Science</b> (2021)</i><br />
+<i><b>Management Science</b> (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4024" target="_blank">[Journal]</a><br />
 &#9671; Preliminary version: <i>Proceedings of the 22nd International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2019</b>)</i>.<br/>
 &#9671;	<span style="color:#DC143C;">Honorable Mention, INFORMS George E. Nicholson 2019 Student Paper Competition</span><br/>
 &#9671;	<span style="color:#DC143C;">Finalist, POMS-JD.com 2019 Best Data-Driven Research Paper Competition</span><br/>
