--- a/index.html
+++ b/index.html
@@ -61,10 +61,6 @@ Major revision, <b><i>Management Science</i></b></br>
 &#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section 2021 Best Cluster Paper Award</span><br/>
 &#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
 		
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
-Major revision, <b><i>Management Science</i></b></br>
-&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
-
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://arxiv.org/abs/2010.03161" target="_blank">Model-Free Non-Stationary RL: Near-Optimal Regret and Applications in Multi-Agent RL and Inventory Control</a></span> (with Weichao Mao, Kaiqing Zhang, David Simchi-Levi, and Tamer Basar)<br />
@@ -78,6 +74,12 @@ Working paper</p>
 	
 	
 <h2>Journal Publications</h2>
+
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
+<b><i>Management Science</i></b> (Accepted subject to Minor Revision)</br>
+	&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
+
+
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3334629" target="_blank">Meta Dynamic Pricing: Transfer Learning Across Experiments</a></span> (with Hamsa Bastani and David Simchi-Levi)<br />
 <i><b>Management Science</b> (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4071" target="_blank">[Journal]</a><br />
