--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Policy Learning
 		</a></span> (with Branislav Kveton)<br /> 
 	&#9671; In collaboration with <a href="https://www.amazon.science/">Amazon Science</a><br/>
-		&#9671; Preliminary version: <i>(Oral Presentation) MIT 2021 Conference on Digital
+		&#9671; Preliminary version: <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>), MIT 2021 Conference on Digital
 			Experimentation (<b>CODE@MIT</b>)</i><br/></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
@@ -93,6 +93,11 @@ Working paper</p>
 &#9671;	<span style="color:#DC143C;">Service Operations SIG Meeting, MSOM Conference 2019</span></p>								
 									
 <h2>Selected Conference Publications</h2>
+
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Policy Learning
+		</a></span> (with Branislav Kveton)<br /> 
+		 <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>)</i></p>
+
 
 <p class="big" align="justify"><span class="papername"><a href="http://proceedings.mlr.press/v139/mao21b.html" target="_blank">Near-Optimal Model-Free Reinforcement Learning in Non-Stationary Episodic MDPs</a></span> (with Weichao Mao, Kaiqing Zhang, David Simchi-Levi, and Tamer Basar)<br />
 <i>Proceedings of the 38th International Conference on Machine Learning (<b>ICML 2021</b>)</i></p>
