--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="index.html#award">Awards</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
 <div class="menu-item"><a href="index.html#service">Services</a></div>
 <div class="menu-item"><a href="CV_RuihaoZhu.pdf">CV</a></div>
@@ -41,7 +42,18 @@
 <p class="big" align="justify">I am an Assistant Professor of Supply Chain and Operations Management at the Purdue Krannert School of Management. Previously, I received my Interdisciplinary Ph.D. in Statistics from the Massachusetts Institute of Technology and B.Eng. degrees in Electrical Engineering and Computer Science from both the Shanghai Jiao Tong University and the University of Michigan in 2015. I spent the summers of 2020 and 2019 as a research scientist intern with Amazon and Google Research. </p>
     
 
-<p class="big" align="justify"> My research seeks to address fundamental and practical challenges in online marketplaces, digital experimentation, retailing & pricing, and supply chain analytics by connecting tools from machine learning, optimization, and economics. As part of it, I have been collaborating with companies across different industries, such as e-commerce, consumer packaged goods, and manufacturing. My works have been recognized by an Honorable Mention in <a href="https://www.informs.org/Recognizing-Excellence/INFORMS-Prizes/George-Nicholson-Student-Paper-Competition" target="_blank">INFORMS George E. Nicholson 2019 Student Paper Competition</a>, a Finalist in POMS-JD.com 2019 Best Data-Driven Research Paper Competition, and a Finalist in <a href="Service_Science_Finalist.pdf" target="_blank">INFORMS Service Science 2021 Best Cluster Paper Award</a>.</p>
+<p class="big" align="justify"> My research seeks to address fundamental and practical challenges in data analytics, online platforms, supply chain, and revenue management by connecting tools from machine learning and optimization. As part of it, I have been collaborating with companies across different industries, such as e-commerce, consumer packaged goods, and manufacturing.</p>
+
+
+<a name="award"></a>
+
+<h2>Awards</h2>
+<p class="big" align="justify"> My works have been recognized by the follwoing awards:<br>
+&#8226; <i>Finalist (Winner TBD)</i>, INFORMS Analytics Society 2022 Innovative Applications in Analytics Award<br/>
+&#8226; <i>Finalist</i>, INFORMS Service Science 2021 Best Cluster Paper Award<br/>
+&#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson 2019 Student Paper Competition<br>
+&#8226; <i>Finalist</i>, POMS-JD.com 2019 Best Data-Driven Research Paper Competition
+</p>
 
 <a name="pub"></a>
 
@@ -58,6 +70,7 @@
 Major revision, <b><i>Management Science</i></b></br>
 &#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
 &#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
+&#9671;	<span style="color:#DC143C;">Finalist (Winner TBD), INFORMS Analytics Society 2022 Innovative Applications in Analytics Award</span><br/>
 &#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section 2021 Best Cluster Paper Award</span><br/>
 &#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
 		
