--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			Experimentation (<b>CODE@MIT</b>)</i><br/></p>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
-Major revision, <b><i>Management Science</i></b></br>
+Major Revision, <b><i>Management Science</i></b></br>
 &#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
 &#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
 &#9671;	<span style="color:#DC143C;">Finalist (Winner TBD), INFORMS Analytics Society 2022 Innovative Applications in Analytics Award</span><br/>
@@ -77,13 +77,10 @@ Major revision, <b><i>Management Science</i></b></br>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://arxiv.org/abs/2010.03161" target="_blank">Model-Free Non-Stationary RL: Near-Optimal Regret and Applications in Multi-Agent RL and Inventory Control</a></span> (with Weichao Mao, Kaiqing Zhang, David Simchi-Levi, and Tamer Basar)<br />
-Under review, <b><i>Management Science</i></b></br>
+Reject & Resubmit, <b><i>Management Science</i></b></br>
 &#9671;	Preliminary version: <i>Proceedings of the 38th International Conference on Machine Learning (<b>ICML 2021</b>)</i></p>
 
 
-<p class="big" align="justify"><span class="papername"><a href="https://arxiv.org/abs/1810.10637" target="_blank">Learning to Route Efficiently with End-to-End Feedback: The Value of Networked Structure</a></span> (with Eytan Modiano)<br />
-Working paper</p>
-	
 	
 	
 <h2>Journal Publications</h2>
