--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="menu-item"><a href="index.html#award">Awards</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
 <div class="menu-item"><a href="index.html#service">Services</a></div>
-<div class="menu-item"><a href="CV_RuihaoZhu.pdf">CV</a></div>
+<div class="menu-item"><a href="https://www.linkedin.com/in/ruihaozhu/">LinkedIn</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -36,7 +36,7 @@
 	<h3>Contact</h3>
 	<p class="big">
 			Email: rhzhu[AT]purdue.edu<br />
-			<a href="https://www.linkedin.com/in/ruihaozhu/">LinkedIn</a>&nbsp;&nbsp; <a href="https://scholar.google.com/citations?user=n6Izbu4AAAAJ&hl=en">Google Scholar</a></p>
+			</p>
 	</td></table>
 <h2>About</h2>
 <p class="big" align="justify">I am an Assistant Professor of Supply Chain and Operations Management at the Purdue Krannert School of Management. Previously, I received my Interdisciplinary Ph.D. in Statistics from the Massachusetts Institute of Technology and B.Eng. degrees in Electrical Engineering and Computer Science from both the Shanghai Jiao Tong University and the University of Michigan in 2015. I spent the summers of 2020 and 2019 as a research scientist intern with Amazon and Google Research. </p>
