--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			</p>
 	</td></table>
 <h2>About</h2>
-<p class="big" align="justify">I am an Assistant Professor of Supply Chain and Operations Management at the Purdue Krannert School of Management. Previously, I received my Interdisciplinary Ph.D. in Statistics from the Massachusetts Institute of Technology and B.Eng. degrees in Electrical Engineering and Computer Science from both the Shanghai Jiao Tong University and the University of Michigan in 2015. I spent the summers of 2020 and 2019 as a research scientist intern with Amazon and Google Research. </p>
+<p class="big" align="justify">I am an Assistant Professor of Supply Chain and Operations Management at the Purdue Krannert School of Management. Previously, I received my Interdisciplinary Ph.D. in Statistics, advised by <a href="https://dsl.mit.edu/">David Simchi-Levi</a>, from the Massachusetts Institute of Technology and B.Eng. degrees in Electrical Engineering and Computer Science from both the Shanghai Jiao Tong University and the University of Michigan in 2015. I spent the summers of 2020 and 2019 as a research scientist intern with Amazon and Google Research. </p>
     
 
 <p class="big" align="justify"> My research seeks to address fundamental and practical challenges in data analytics, online platforms, supply chain, and revenue management by connecting tools from machine learning and optimization. As part of it, I have been collaborating with companies across different industries, such as e-commerce, consumer packaged goods, and manufacturing.</p>
