--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
 <h2>Awards</h2>
 <p class="big" align="justify"> My works have been recognized by the follwoing awards:<br>
-&#8226; <i>Finalist (Winner TBD)</i>, INFORMS Analytics Society 2022 Innovative Applications in Analytics Award<br/>
-&#8226; <i>Finalist</i>, INFORMS Service Science 2021 Best Cluster Paper Award<br/>
-&#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson 2019 Student Paper Competition<br>
-&#8226; <i>Finalist</i>, POMS-JD.com 2019 Best Data-Driven Research Paper Competition
+&#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
+&#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
+&#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson Student Paper Competition 2019<br>
+&#8226; <i>Finalist</i>, POMS-JD.com Best Data-Driven Research Paper Competition 2019
 </p>
 
 <a name="pub"></a>
@@ -70,8 +70,8 @@
 Major Revision, <b><i>Management Science</i></b></br>
 &#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
 &#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
-&#9671;	<span style="color:#DC143C;">Finalist (Winner TBD), INFORMS Analytics Society 2022 Innovative Applications in Analytics Award</span><br/>
-&#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section 2021 Best Cluster Paper Award</span><br/>
+&#9671;	<span style="color:#DC143C;">2nd Place, INFORMS Innovative Applications in Analytics Award 2022</span><br/>
+&#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section Best Cluster Paper Award 2021</span><br/>
 &#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
 		
 
@@ -93,18 +93,18 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3334629" target="_blank">Meta Dynamic Pricing: Transfer Learning Across Experiments</a></span> (with Hamsa Bastani and David Simchi-Levi)<br />
 <i><b>Management Science</b> (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4071" target="_blank">[Journal]</a><br />
-&#9671;	<span style="color:#DC143C;">Spotlight Track, INFORMS 2019 RM&P Conference</span></p>
+&#9671;	<span style="color:#DC143C;">Spotlight Track, INFORMS RM&P Conference 2019</span></p>
 		
 <p class="big"> <span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3261050" target="_blank">Hedging the Drift: Learning to Optimize under Non-Stationarity</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br />
 <i><b>Management Science</b> (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4024" target="_blank">[Journal]</a><br />
 &#9671; Preliminary version: <i>Proceedings of the 22nd International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2019</b>)</i>.<br/>
-&#9671;	<span style="color:#DC143C;">Honorable Mention, INFORMS George E. Nicholson 2019 Student Paper Competition</span><br/>
-&#9671;	<span style="color:#DC143C;">Finalist, POMS-JD.com 2019 Best Data-Driven Research Paper Competition</span><br/>
+&#9671;	<span style="color:#DC143C;">Honorable Mention, INFORMS George E. Nicholson Student Paper Competition 2019</span><br/>
+&#9671;	<span style="color:#DC143C;">Finalist, POMS-JD.com Best Data-Driven Research Paper Competition 2019</span><br/>
 &#9671;	<span style="color:#DC143C;">Service Operations SIG Meeting, MSOM Conference 2019</span></p>								
 									
 <h2>Selected Conference Publications</h2>
 
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Policy Learning
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Off-Policy Learning
 		</a></span> (with Branislav Kveton)<br /> 
 		 <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>)</i></p>
 
