--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3334629" target="_blank">Meta Dynamic Pricing: Transfer Learning Across Experiments</a></span> (with Hamsa Bastani and David Simchi-Levi)<br />
-<i><b>Management Science</b> (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4071" target="_blank">[Journal]</a><br />
+<i><b>Management Science</b> 68(3): 1865-1881 (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4071" target="_blank">[Journal]</a><br />
 &#9671;	<span style="color:#DC143C;">Spotlight Track, INFORMS RM&P Conference 2019</span></p>
 		
 <p class="big"> <span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3261050" target="_blank">Hedging the Drift: Learning to Optimize under Non-Stationarity</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br />
-<i><b>Management Science</b> (2021)</i> <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4024" target="_blank">[Journal]</a><br />
+<i><b>Management Science</b> 68(3): 1696-1713 (2021)</i>  <a href="https://pubsonline.informs.org/doi/abs/10.1287/mnsc.2021.4024" target="_blank">[Journal]</a><br />
 &#9671; Preliminary version: <i>Proceedings of the 22nd International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2019</b>)</i>.<br/>
 &#9671;	<span style="color:#DC143C;">Honorable Mention, INFORMS George E. Nicholson Student Paper Competition 2019</span><br/>
 &#9671;	<span style="color:#DC143C;">Finalist, POMS-JD.com Best Data-Driven Research Paper Competition 2019</span><br/>
