--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <h2>Selected Working Papers</h2>
 
 
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Policy Learning
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Offline and Online Policy Learning
 		</a></span> (with Branislav Kveton)<br /> 
 	&#9671; In collaboration with <a href="https://www.amazon.science/">Amazon Science</a><br/>
 		&#9671; Preliminary version: <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>), MIT 2021 Conference on Digital
@@ -104,7 +104,7 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 									
 <h2>Selected Conference Publications</h2>
 
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Optimal Design with Applications in Off-Policy Learning
+<p class="big" align="justify"><span class="papername"><a href="https://proceedings.mlr.press/v151/zhu22a.html" target="_blank">Safe Optimal Design with Applications in Off-Policy Learning
 		</a></span> (with Branislav Kveton)<br /> 
 		 <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>)</i></p>
 
