--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="index.html#award">Awards</a></div>
+<div class="menu-item"><a href="index.html#award">Research</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
-<div class="menu-item"><a href="index.html#service">Services</a></div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/ruihaozhu/">LinkedIn</a></div>
 </td>
 <td id="layout-content">
@@ -30,25 +29,25 @@
 <table class="imgtable"><td>
 <img src="ruihao.jpeg" alt="Ruihao Zhu" height="300" width="300" />&nbsp;</td>
 </td>
-<td align="left"><p class="big">Assistant Professor<br>
-		Purdue University Krannert School of Management<br>
+<td align="left"><p class="big">Assistant Professor of Operations, Technology, and Information Management<br>
+		Cornell University SC Johnson College of Business<br>
 	</p>
 	<h3>Contact</h3>
 	<p class="big">
 			Email: ruihao.zhu[AT]cornell.edu<br />
 			</p>
 	</td></table>
-<h2>About</h2>
-<p class="big" align="justify">I am an Assistant Professor of Supply Chain and Operations Management at the Purdue Krannert School of Management. Previously, I received my Interdisciplinary Ph.D. in Statistics, advised by <a href="http://slevi1.mit.edu/">David Simchi-Levi</a>, from the Massachusetts Institute of Technology and B.Eng. degrees in Electrical Engineering and Computer Science from both the Shanghai Jiao Tong University and the University of Michigan in 2015. I spent the summers of 2020 and 2019 as a research scientist intern with Amazon and Google Research. </p>
+<h2>Education Background</h2>
+<p class="big" align="justify">
+Ph.D. in Statistics, Massachusetts Institute of Technology, 2021 (Advisor: <a href="http://slevi1.mit.edu/">David Simchi-Levi</a>)<br/> 
+B.Eng. in Electrical and Computer Engineering, Shanghai Jiao Tong University, 2015 <br/>
+B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2015
     
-
-<p class="big" align="justify"> My research seeks to address fundamental and practical challenges in data analytics, online platforms, supply chain, and revenue management by connecting tools from reinforcement learning and optimization. As part of it, I have been collaborating with companies across different industries, such as e-commerce, consumer packaged goods, and manufacturing.</p>
-
 
 <a name="award"></a>
 
-<h2>Awards</h2>
-<p class="big" align="justify"> My works have been recognized by the follwoing awards:<br>
+<h2>Research Interests</h2>
+<p class="big" align="justify"> My research develops novel algorithms for machine learning and sequential decision-making (multi-armed bandit, reinforcement learning, and online learning) to address fundamental and practical challenges in online platforms, supply chain, and revenue management. My works have been recognized by the follwoing awards:<br>
 &#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
 &#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
 &#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson Student Paper Competition 2019<br>
@@ -132,30 +131,6 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 <i>Proceedings of the 15th ACM International Symposium on Mobile Ad Hoc Networking and Computing (<b>MobiHoc 2014</b>)</i></p>
 
 
-<!--<a name="teaching"></a>
-<h2>Teaching</h2>
-
-<p class="big">
-	&#8226; MIT 1.S982 Statistical Learning in Operations (Spring 2020)<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Enrollment: 15 (primarily PhD student)<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Teaching Assistant for <a href="http://dsl.mit.edu" target="_blank">David Simchi-Levi</a></p>
-
-<p class="big">
-	&#8226; MIT Sloan 15.774 The Analytics of Operations Management (Fall 2019)<br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Enrollment: 61 (primarily Full-Time MBA, Master of Supply Chain Management, and Master of Business Analytics programs)<br>
-			&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Core requirement for MIT Sloan Business Analytics Certificate<br>
-				&nbsp;&nbsp;&nbsp;&nbsp;&mdash; Teaching Assistant for <a href="http://www.mit.edu/~golrezae/index.html" target="_blank">Negin Golrezaei</a></p>
--->
-<a name="service"></a>
-
-<h2>Professional Services</h2>
-
-<p class="big" align="justify">&#8226; Reviewer for Management Science, Operations Research, Manufacturing & Service Operations Management, Production and Operations Management, MSOM Service Operations SIG 2020 - 21, Journal of Machine Learning Research (JMLR), IEEE Journal on Selected Areas in Information Theory (JSAIT), International Conference on Machine Learning (ICML) 2020 - 21, Conference on Neural Information Processing Systems (NeurIPS) 2019 - 21, International Conference on Algorithmic Learning Theory (ALT) 2019.</p>
-
-
-<!--<p class="big">&#8226; Co-organizer (together with David Simchi-Levi) of MIT Data Science Lab 2019 Workshop on Learning and Optimizing in Operations. [<a href="https://dsl.mit.edu/data-science-lab-workshop-learning-and-optimizing-operations">link</a>]</p>
-
-<p class="big">&#8226; Coordinator of MIT Data Science Lab seminar series (2019 - 21).</p>-->
 
 
 </td>
