--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <table class="imgtable"><td>
 <img src="ruihao.jpeg" alt="Ruihao Zhu" height="300" width="300" />&nbsp;</td>
 </td>
-<td align="left"><p class="big">Assistant Professor of Operations, Technology, and Information Management<br>
-		Cornell University SC Johnson College of Business<br>
+<td align="left"><p class="big">Assistant Professor<br>
+		Purdue University Krannert School of Management<br>
 	</p>
 	<h3>Contact</h3>
 	<p class="big">
