--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 <b><i>Management Science</i></b> (Accepted subject to Minor Revision)</br>
 	&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
 
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3396096" target="_blank">Joint Patient Selection and Scheduling under No-Shows: Theory and Application in Proton Therapy</a></span> (with Soroush Saghafian, Nikolaos Trichakis, and Helen Shih)<br /> 
+		<b><i>Production and Operations Management</i></b> (Accepted)</br>
+	&#9671; In collaboration with <a href="https://www.massgeneral.org/">Massachusetts General Hospital</a><br/>
+
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3334629" target="_blank">Meta Dynamic Pricing: Transfer Learning Across Experiments</a></span> (with Hamsa Bastani and David Simchi-Levi)<br />
