--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</td></table>
 <h2>Education Background</h2>
 <p class="big" align="justify">
-Ph.D. in Statistics, Massachusetts Institute of Technology, 2021 (Advisor: <a href="http://slevi1.mit.edu/">David Simchi-Levi</a>)<br/> 
+Ph.D. in Controls and Statistics, Massachusetts Institute of Technology, 2021 (Advisor: <a href="http://slevi1.mit.edu/">David Simchi-Levi</a>)<br/> 
 B.Eng. in Electrical and Computer Engineering, Shanghai Jiao Tong University, 2015 <br/>
 B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2015
     
