--- a/index.html
+++ b/index.html
@@ -65,13 +65,10 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 		&#9671; Preliminary version: <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>), MIT 2021 Conference on Digital
 			Experimentation (<b>CODE@MIT</b>)</i><br/></p>
 
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
-Major Revision, <b><i>Management Science</i></b></br>
-&#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
-&#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
-&#9671;	<span style="color:#DC143C;">2nd Place, INFORMS Innovative Applications in Analytics Award 2022</span><br/>
-&#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section Best Cluster Paper Award 2021</span><br/>
-&#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
+
+	<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
+		Minor Revision,	<b><i>Management Science</i></b></br>
+		&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
 		
 
 
@@ -84,9 +81,14 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 	
 <h2>Journal Publications</h2>
 
-<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
-<b><i>Management Science</i></b> (Accepted subject to Minor Revision)</br>
-	&#9671; Preliminary version: <i>Proceedings of the 37th International Conference on Machine Learning (<b>ICML 2020</b>)</i></p>
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3670264" target="_blank">Calibrating Sales Forecast in a Pandemic Using Competitive Online Non-Parametric Regression</a></span> (with David Simchi-Levi, Rui Sun, and Michelle X. Wu)<br /> 
+		<b><i>Management Science</i></b> (Accepted)</br>
+	&#9671; In collaboration with <a href="https://www.ab-inbev.com/">AB InBev</a><br/>
+		&#9671; Preliminary version: <i>(Oral Presentation) KDD 2021 Workshop on Machine Learning for Consumers and Markets (<b>MLCM at KDD 2021</b>)</i><br/>
+			&#9671;	<span style="color:#DC143C;">2nd Place, INFORMS Innovative Applications in Analytics Award 2022</span><br/>
+				&#9671;	<span style="color:#DC143C;">Finalist, INFORMS Service Science Section Best Cluster Paper Award 2021</span><br/>
+					&#9671;	<span style="color:#DC143C;">Supply Chain Management SIG Meeting, MSOM Conference 2021</span></p>
+
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3396096" target="_blank">Joint Patient Selection and Scheduling under No-Shows: Theory and Application in Proton Therapy</a></span> (with Soroush Saghafian, Nikolaos Trichakis, and Helen Shih)<br /> 
 		<b><i>Production and Operations Management</i></b> (Accepted)</br>
