--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <img src="ruihao.jpeg" alt="Ruihao Zhu" height="300" width="300" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">Assistant Professor of Operations, Technology, and Information Management<br>
-			Nolan School of Hotel Administration<br>
+			Peter and Stephanie Nolan School of Hotel Administration<br>
 		Cornell SC Johnson College of Business<br>
 	</p>
 	<h3>Contact</h3>
