--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 <a name="award"></a>
 
 <h2>Research Interests</h2>
-<p class="big" align="justify"> My research develops novel algorithms for machine learning and sequential decision-making (multi-armed bandit, reinforcement learning, and online learning) to address fundamental and practical challenges in revenue management, supply chain, and healthcare. My works have been recognized by the follwoing awards:<br>
+<p class="big" align="justify"> My research develops novel algorithms for machine learning and sequential decision-making (multi-armed bandit, reinforcement learning, and online learning) to address fundamental and practical challenges in digital economy, business analytics, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
 &#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
 &#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
 &#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson Student Paper Competition 2019<br>
