--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 
 <h2>Selected Working Papers</h2>
 
+<p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4178738" target="_blank">Risk-Aware Linear Bandits: Theory and Applications in Smart Order Routing</a></span> (with Jingwei Ji and Renyuan Xu)<br /> 
+		Preprint<br/>
+</p>
+
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Data Collection for Offline and Online Policy Learning </a></span> (with Branislav Kveton)<br /> 
+Preprint<br/>
 &#9671; In collaboration with <a href="https://www.amazon.science/">Amazon</a><br/>
 &#9671; Preliminary version: <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>), MIT 2021 Conference on Digital Experimentation (<b>CODE@MIT</b>)</i><br/></p>
 			
