--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 <a name="award"></a>
 
 <h2>Research Interests</h2>
-<p class="big" align="justify"> My research develops novel algorithms for machine learning and sequential decision-making (multi-armed bandit, reinforcement learning, and online learning) to address fundamental and practical challenges in digital economy, business analytics, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
+<p class="big" align="justify"> I work on developing novel algorithms for machine learning and online decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
 &#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
 &#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
 &#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson Student Paper Competition 2019<br>
@@ -61,14 +61,16 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 <h2>Selected Working Papers</h2>
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4178738" target="_blank">Risk-Aware Linear Bandits: Theory and Applications in Smart Order Routing</a></span> (with Jingwei Ji and Renyuan Xu)<br /> 
-		Preprint<br/>
+Preprint<br/>
+&#9671; Preliminary version: <i>Proceedings of the 3rd ACM International Conference on AI in Finance (<b>ICAIF 2022</b>), INFORMS Workshop on Data Science 2022</i><br/>
 </p>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3959086" target="_blank">Safe Data Collection for Offline and Online Policy Learning </a></span> (with Branislav Kveton)<br /> 
 Preprint<br/>
 &#9671; In collaboration with <a href="https://www.amazon.science/">Amazon</a><br/>
-&#9671; Preliminary version: <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>), MIT 2021 Conference on Digital Experimentation (<b>CODE@MIT</b>)</i><br/></p>
+&#9671; Preliminary version: <i>Proceedings of the 25th International Conference on Artificial Intelligence and Statistics (<b>AISTATS 2022</b>), MIT 2021 Conference on Digital Experimentation (<b>CODE@MIT</b>), INFORMS Workshop on Data Science 2022</i><br/>
+</p>
 			
 			
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3397818" target="_blank">Non-Stationary Reinforcement Learning: The Blessing of (More) Optimism</a></span> (with Wang Chi Cheung and David Simchi-Levi)<br /> 
