--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </td>
 <td align="left"><p class="big">
 		Assistant Professor of Business Analytics<br>
-		Cornell	Peter and Stephanie Nolan School of Hotel Administration<br>
+		Cornell	Nolan School of Hotel Administration<br>
 		Cornell SC Johnson College of Business<br>
 	</p>
 	<h3>Contact</h3>
