--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="index.html#award">Research</a></div>
+<div class="menu-item"><a href="index.html#research">Research</a></div>
 <div class="menu-item"><a href="index.html#pub">Publications</a></div>
 <div class="menu-item"><a href="https://www.linkedin.com/in/ruihaozhu/">LinkedIn</a></div>
 </td>
@@ -46,7 +46,7 @@ B.Eng. in Electrical and Computer Engineering, Shanghai Jiao Tong University, 20
 B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2015
     
 
-<a name="award"></a>
+<a name="research"></a>
 
 <h2>Research Interests</h2>
 <p class="big" align="justify"> I work on developing novel algorithms for machine learning, optimization, and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
