--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <img src="ruihao.jpeg" alt="Ruihao Zhu" height="300" width="300" />&nbsp;</td>
 </td>
 <td align="left"><p class="big">
-		Assistant Professor of Business Analytics<br>
+		Assistant Professor of Operations, Technology, and Information Management<br>
 		Cornell	Nolan School of Hotel Administration<br>
 		Cornell SC Johnson College of Business<br>
 	</p>
@@ -49,7 +49,7 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 <a name="research"></a>
 
 <h2>Research Interests</h2>
-<p class="big" align="justify"> I work on developing novel algorithms for machine learning, optimization, and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
+<p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
 &#8226; <i>Finalist</i> (Winner TBD), INFORMS George B. Dantzig Dissertation Award 2022<br/>
 &#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
 &#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
