--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 <a name="research"></a>
 
 <h2>Research Interests</h2>
-<p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the follwoing awards:<br>
-&#8226; <i>Finalist</i> (Winner TBD), INFORMS George B. Dantzig Dissertation Award 2022<br/>
+<p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the following awards:<br>
+&#8226; <i>Honorable Mentioned</i>, INFORMS George B. Dantzig Dissertation Award 2022<br/>
 &#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
 &#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
 &#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson Student Paper Competition 2019<br>
@@ -103,7 +103,7 @@ Reject & Resubmit, <b><i>Management Science</i></b></br>
 
 
 <p class="big" align="justify"><span class="papername"><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3396096" target="_blank">Joint Patient Selection and Scheduling under No-Shows: Theory and Application in Proton Therapy</a></span> (with Soroush Saghafian, Nikolaos Trichakis, and Helen Shih)<br /> 
-<b><i>Production and Operations Management</i></b> (Accepted)</br>
+<b><i>Production and Operations Management</i></b> <a href="https://onlinelibrary.wiley.com/doi/10.1111/poms.13886" target="_blank">[Journal]</a></br>
 &#9671; In collaboration with <a href="https://www.massgeneral.org/">Massachusetts General Hospital</a><br/>
 
 
