--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ B.Eng. in Electrical Engineering and Computer Science, University of Michigan, 2
 
 <h2>Research Interests</h2>
 <p class="big" align="justify"> I work on developing novel algorithms for machine learning and sequential decision-making (<i>e.g.</i>, multi-armed bandits and reinforcement learning) to address fundamental and practical challenges in revenue management, supply chain, and service operations. My works have been recognized by the following awards:<br>
-&#8226; <i>Honorable Mentioned</i>, INFORMS George B. Dantzig Dissertation Award 2022<br/>
+&#8226; <i>Honorable Mention</i>, INFORMS George B. Dantzig Dissertation Award 2022<br/>
 &#8226; <i>2nd Place</i>, INFORMS Innovative Applications in Analytics Award 2022<br/>
 &#8226; <i>Finalist</i>, INFORMS Service Science Best Cluster Paper Award 2021<br/>
 &#8226; <i>Honorable Mention</i>, INFORMS George E. Nicholson Student Paper Competition 2019<br>
